# rhizomatic

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE-APACHE  PROGRESS.md  README.md
.adlc/: tickets.json
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
apps/chorus/: CONSTELLATION.md  README.md  package-lock.json  package.json
apps/chorus/src/: adjudicator.ts  agent.ts  briefing.ts  concepts.ts  console.ts  decisions.ts  discovery.ts  gql.ts  identity.ts  index.ts  librarian.ts  mcp-http.ts  mcp-server.ts  messages.ts  shared-store.ts  sqlite-store.ts  store-reads.ts  store-tier.ts  store.ts  stores.ts
apps/chorus/test/: chorus-client.test.ts  chorus-mcp.test.ts  chorus-messages.test.ts  chorus-mx.test.ts  chorus-store-conformance.test.ts  chorus-store-indexed.test.ts  chorus-stores.test.ts  chorus-trust.test.ts
docs/: agents.html  index.html  playground.bundle.js  playground.html  rust-witness.wasm  tour.bundle.js  tour.html
implementations/: README.md
implementations/elixir/: .gitignore  CLAUDE.md  FINDINGS.md  mix.exs  witness.json
implementations/elixir/lib/rhizomatic/: base64url.ex  blake3.ex  cbor.ex  delta.ex  ed25519.ex  hash.ex  pack.ex  profile.ex  set_digest.ex  signer.ex
implementations/elixir/test/: boundary_test.exs  cbor_primitives_test.exs  deltas_bytes_test.exs  deltas_invalid_test.exs  deltas_test.exs  keys_and_signed_test.exs  pack_test.exs  set_digest_test.exs  sig_edge_test.exs
implementations/elixir/test/support/: vectors.ex
implementations/rust/: CLAUDE.md  Cargo.toml  README.md  witness.json
implementations/rust/examples/: http_sync.rs
implementations/rust/src/: alias.rs  b64u.rs  cbor.rs  delta.rs  derivation.rs  eval.rs  hash.rs  http.rs  hview.rs  json_profile.rs  lib.rs  materialize.rs  pack.rs  peer.rs  policy.rs  pred.rs  reactor.rs  resolution.rs  schema.rs  schema_deltas.rs  set.rs  sign.rs  strict.rs  term_io.rs  term_json.rs  types.rs  wasm.rs
implementations/rust/tests/: aliased.rs  bytes_easter_egg.rs  cbor.rs  derivation.rs  eval.rs  expand.rs  holes.rs  http.rs  hview.rs  materialize.rs  pack.rs  peer.rs  reactor.rs  reflective.rs  resolve.rs  schema_deltas.rs  set.rs  sign.rs  strict_keys.rs  txn.rs  vectors.rs
implementations/ts/: .npmignore  .npmrc  .prettierignore  CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  witness.json
implementations/ts/chorus/: README.md  agent.ts  briefing.ts  concepts.ts  console.ts  decisions.ts  demo.ts  discovery.ts  identity.ts  index.ts  librarian.ts  mcp-server.ts  shared-store.ts  store.ts  vocab.ts
implementations/ts/demo/: demo.ts
implementations/ts/demo/playground/: index.html  playground.ts
implementations/ts/demo/tour/: tour.ts
implementations/ts/src/: alias.ts  b64u.ts  cbor.ts  delta.ts  derivation.ts  eval.ts  hash.ts  http.ts  hview.ts  index.ts  json-profile.ts  pack.ts  peer.ts  policy.ts  pred.ts  reactor.ts  resolution.ts  schema-deltas.ts  schema.ts  set.ts  sign.ts  strict.ts  term-io.ts  term-json.ts  types.ts  vocab.ts
implementations/ts/test/: aliased.test.ts  bytes-easter-egg.test.ts  cbor.test.ts  chorus-client.test.ts  chorus-console.test.ts  chorus-demo.test.ts  chorus-discovery.test.ts  chorus-librarian.test.ts  chorus-mcp.test.ts  chorus-mx.test.ts  chorus-power.test.ts  chorus-shared-store.test.ts  chorus.test.ts  demo.test.ts  derivation.test.ts  eval.test.ts  expand.test.ts  holes.test.ts  http.test.ts  materialize.test.ts  pack.test.ts  peer.test.ts  reactor.test.ts  reflective.test.ts  resolve.test.ts  schema-deltas.test.ts  set.test.ts  sign.test.ts  strict-keys.test.ts  txn.test.ts  vectors.test.ts
implementations/ts/tools/: check-console-page.ts  gen-vectors.ts  release.ts  serve-interop.ts
spec/: 00-overview.md  01-delta.ERRATA.md  01-delta.md  02-operators.ERRATA.md  02-operators.md  03-schema.ERRATA.md  03-schema.md  04-reactor.ERRATA.md  04-reactor.md  05-resolution.ERRATA.md  05-resolution.md  06-federation.ERRATA.md  06-federation.md  07-derivation-abi.PROPOSAL.md  07-derivation.ERRATA.md  07-derivation.md  08-storage.ERRATA.md  08-storage.md  09-alias.PROPOSAL.md  10-patch-theory.NOTE.md  11-federation-as-query.NOTE.md  12-instances-provenance-privacy.NOTE.md  ERRATA-REVIEW.md
tools/: check-all.mjs
vectors/: README.md
vectors/keys/: keys.json
vectors/l0-delta/: cbor-primitives.json  deltas-bytes.json  deltas-invalid.json  deltas-sig-edge.json  deltas-signed.json  deltas.json  set-digest.json
vectors/l0-pack/: pack-bytes.json  pack.json
vectors/l1-eval/: eval-aliased.json  eval-basic.json  eval-expand.json  eval-holes.json  eval-hview.json  eval-reflective.json  eval-resolve.json  eval-setalgebra.json  eval-strict-keys.json  schema-deltas.json
