[package]
name = "rhizomatic"
version = "0.1.0"
edition = "2021"
# In-repo conformance witness: independent validation of the TypeScript implementation, plus the
# WASM witness for the docs tour. Deliberately NOT published to crates.io — nothing depends on it and
# there are no plans to. The metadata below is kept accurate anyway; flip `publish` if that changes.
publish = false
description = "Rhizomatic (Rust) — a portable format for arbitrarily-relational data: signed, content-addressed deltas; union merge (grow-only CRDT); truth resolved per-reader. One of two parallel witnesses to the spec."
authors = ["Mykola Bilokonsky"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mbilokonsky/rhizomatic"
homepage = "https://mbilokonsky.github.io/rhizomatic/"
readme = "README.md"
keywords = ["crdt", "content-addressed", "provenance", "cbor", "federation"]
categories = ["data-structures", "encoding", "cryptography"]

[lib]
# cdylib is for the WASM build of the witness (src/wasm.rs, used by the docs/ tour);
# rlib keeps normal tests/examples working.
crate-type = ["rlib", "cdylib"]

[dependencies]
blake3 = "1"
# curve25519-dalek + sha2 implement the SPEC-1 §5.1 strict acceptance criterion check by check
# (ERRATA D13) — the spec text, not any library's "strict" default, is the criterion.
curve25519-dalek = "4"
ed25519-dalek = "2"
hex = "0.4"
sha2 = "0.10"
# float_roundtrip is REQUIRED: without it serde_json's fast float path can parse decimal
# numbers up to 1 ULP off, which fractures canonical-bytes parity with JS (caught by the
# float-f16-min-subnormal vector). See ERRATA "JSON debug profile".
serde_json = { version = "1", features = ["float_roundtrip"] }
unicode-normalization = "0.1"

# The HTTP binding is host-only: these crates do not build on wasm32-unknown-unknown.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tiny_http = "0.12"
ureq = { version = "2", default-features = false }

[dev-dependencies]
proptest = "1"

[profile.release]
# Keep the WASM witness small; the host build doesn't care.
opt-level = "s"
lto = true
